# doc-summary-and-plagiarism-detection

./: .gitignore  Makefile  README.md  config.py  dataset.dvc  embeddings.py  evaluation.py  nlp.py  predict.py  pyproject.toml  recipes.py  statistic.py  streamlit.py  train.py
.github/workflow/: test-workflow.yaml
.github/workflows/: test-workflow.yaml
.streamlit/: config.toml
app/: __init__.py  settings.py  templates.py
app/dataloader/: __init__.py  dataloader.py  pdf.py
app/models/: __init__.py
app/models/plagiarism/: __init__.py  all_mini_lm.py  base.py  camembert.py  distiluse.py  doc2vec.py
app/models/summarize/: __init__.py  bart_large_cnn.py  barthez_oranges.py  base.py  openai.py
app/processors/: __init__.py  nlp.py
assets/dataset/summarize/: wiki_lingua_fr.json
assets/metrics/: result.html  result.txt  result_statistic.json
models/: doc2vec.py
models/plagiarism/: __init__.py  camembert.py  distiluse.py
models/summarization/: camembert2camembert_shared.py
pages/: 1_🔎_plagiarism.py  2_📝_summarizer.py  3_ℹ️_about_.py  plagiarism.py  summarizer.py
recipes/: make_cache_dataset.py
tests/: test_1_dataloader.py  test_2_embedings.py  test_3_train.py  test_4_predict.py
utils/: __init__.py  config.py  data_loader.py  entities.py  enumerations.py  nlp.py  nlp_toolbox.py  pdf.py
