[tool.poetry]
name = "doc-summary-and-plagiarism-detection"
version = "0.1.0"
description = "deeplearning for document summarization and plagiarism detection"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
spacy = "^3.3.0"
nltk = "^3.7"
tensorflow = "^2.8.0"
scikit-learn = "^1.1.0"
PyMuPDF = "^1.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
mypy = "^0.950"
ipython = "^8.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
