[tool.poetry]
name = "doc-summary-and-plagiarism-detection"
version = "0.1.0"
description = "deeplearning for document summarization and plagiarism detection"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
spacy = "^3.3.0"
tensorflow = "^2.8.0"
scikit-learn = "^1.1.0"
PyMuPDF = "^1.20.0"
gensim = "^4.2.0"
Unidecode = "^1.3.4"
transformers = "^4.20.1"
torch = "^1.12.0"
sentence-transformers = "^2.2.2"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
hydra-core = "^1.2.0"
bitarray = "^2.5.1"
sacrebleu = "^2.1.0"
streamlit = "^1.11.0"
environs = "^9.5.0"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
mypy = "^0.950"
ipython = "^8.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
